--- a/1113-1.html
+++ b/1113-1.html
@@ -225,7 +225,7 @@
     //mouseout event handler function
     function onMouseOut(d, i) {
         // use the text label class to remove label on mouseout
-        d3.select(this).attr('class', 'bar2');
+        d3.select(this).attr('class', 'bar');
         d3.select(this)
           .transition()     // adds animation
           .duration(400)
