--- a/1113-1.html
+++ b/1113-1.html
@@ -204,7 +204,7 @@
     
     //mouseover event handler function
     function onMouseOver(d, i) {
-        d3.select(this).attr('class', 'highlight2');
+        d3.select(this).attr('class', 'highlight');
         d3.select(this)
           .transition()     // adds animation
           .duration(400)
