--- a/1113-1.html
+++ b/1113-1.html
@@ -9,13 +9,7 @@
             fill: orange;
         }
       
-           .bar2 {
-            fill: rgb(36, 26, 133);
-        }
-
-        .highlight2 {
-            fill: rgb(0, 255, 200);
-        }
+   
         </style>
 
 
@@ -184,10 +178,10 @@
          .attr("stroke", "black")
          .text("Stock Price");
 
-        g2.selectAll(".bar2")
+        g2.selectAll(".bar")
          .data(data)
          .enter().append("rect")
-         .attr("class", "bar2")
+         .attr("class", "bar")
          .on("mouseover", onMouseOver) //Add listener for the mouseover event
          .on("mouseout", onMouseOut)   //Add listener for the mouseout event
          .attr("x", function(d) { return x(d.year); })
@@ -228,7 +222,7 @@
     //mouseout event handler function
     function onMouseOut(d, i) {
         // use the text label class to remove label on mouseout
-        d3.select(this).attr('class', 'bar2');
+        d3.select(this).attr('class', 'bar');
         d3.select(this)
           .transition()     // adds animation
           .duration(400)
