--- a/1113-1.html
+++ b/1113-1.html
@@ -20,7 +20,7 @@
 <svg id="svg"width="600" height="500"></svg>
 <br>
 <svg id="svg2"width="600" height="500"></svg>
-</body>svg>
+</body>
 <script>
 
     var svg = d3.select("#svg"),
