--- a/1113-1.html
+++ b/1113-1.html
@@ -136,7 +136,7 @@
         height = svg.attr("height") - margin;
 
 
-    svg.append("text")
+    svg2.append("text")
        .attr("transform", "translate(100,0)")
        .attr("x", 50)
        .attr("y", 50)
