--- a/1113-1.html
+++ b/1113-1.html
@@ -130,7 +130,7 @@
 
              }
 
-    var svg = d3.select("#svg2"),
+    var svg2 = d3.select("#svg2"),
         margin = 200,
         width = svg.attr("width") - margin,
         height = svg.attr("height") - margin;
